Reset current selected account when loading a file

The ID of the currently shown account in the ledger view was not reset
when another file was loaded. This false information was then used while
editing transactions ending in an error message, that the account is
unknown.

BUG: 399244
FIXED-IN: 5.0.2